fix overflow

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ main {
   color: white;
   background-color: #000;
   z-index: -2;
+  overflow: hidden !important;
 }
 main p {
   font-weight: 300;
